namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  labels:
    kubernetes.io/metadata.name: http-echo
  name: http-echo
spec:
  finalizers:
    - kubernetes
